--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -72,4 +72,5 @@
     <string name="hint_rela">Quan hệ</string>
     <string name="hint_info">Email/Điện thoại</string>
     <string name="notify_activity_header">Danh sách người thân</string>
+    <string name="askforflash">Sử dụng đèn Flash</string>
 </resources>
