--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,14 +1,15 @@
 <resources>
-    <string name="app_name">Stress Detector</string>
+    <string name="app_name">Destressify</string>
     <string name="button_Camera">Chẩn đoán</string>
     <string name="button_History">Lịch sử</string>
-    <string name="title">Stress Detector</string>
+    <string name="button_Step">Bước đi</string>
+    <string name="title">Destressify</string>
     <string name="instruction">Đặt ngón tay của bạn tiếp xúc và che phủ toàn bộ camera</string>
     <string name="get_started">Bắt đầu</string>
     <string name="ok_button">OK</string>
+    <string name="cameraX_text">BPM</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="request_permission">This sample needs camera permission.</string>
-    <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="camera_error">This device doesn\'t support Camera2 API.</string>
     <string name="avnn">Average of all NN intervals</string>
     <string name="sdnn" translatable="false">Standard deviation of all NN intervals</string>
@@ -26,23 +27,11 @@
     <string name="question_1">Bạn cảm thấy nguyên nhân căng thẳng của bản thân giống với trường hợp nào nhất?</string>
     <string name="stress_name">Căng thẳng</string>
     <string name="stress_time">do áp lực thời gian</string>
-    <string name="stress_unconfident">do cảm giác thiếu chắc chắn</string>
-    <string name="stress_event">do sự kiện bất ngờ</string>
-    <string name="stress_people">liên quan đến con người</string>
     <string name="des_stress_time">Bạn thấy mình khó mà hoàn thành công việc đúng giờ, và một ngày có 24 tiếng dường như chẳng đủ cho bạn.</string>
-    <string name="des_stress_unconfident">Bạn lo lắng về tương lai của bản thân, sợ việc thất bại, cảm thấy mình thua kém người khác,…</string>
-    <string name="des_stress_event">Có những chuyện không may xảy ra, và giờ bạn cảm thấy mọi thứ cứ rối tinh rối mù lên hết</string>
-    <string name="des_stress_people">Bạn cảm thấy mệt mỏi và sợ hãi khi phải tiếp xúc hay tương tác với người khác</string>
     <string name="note_stress_time">Dù thế nào thì, việc bạn cố gắng đã rất đáng khen rồi đó! Đừng ép buộc bản thân quá nha!</string>
-    <string name="note_stress_unconfident">Hãy nhớ bạn là một con người tuyệt vời lắm luôn ý, và mọi thứ sẽ ổn thôi!</string>
-    <string name="note_stress_event">Rồi mọi chuyện sẽ qua, mong là bạn luôn giữ được sự lạc quan của mình nghe</string>
-    <string name="note_stress_people">Mỗi người có một tính cách và sức chịu đựng riêng. Ai cũng có lúc cảm thấy căng thẳng mà.</string>
     <string name="loi_khuyen">Lời khuyên:</string>
-    <string name="button_Survey">Câu hỏi</string>
     <string name="quest_sleeptime">Tối qua bạn ngủ bao nhiêu giờ?</string>
-    <string name="quest_stress">Bạn có đang cảm thấy căng thẳng không?</string>
     <string name="hint_sleeptime">Nhập số giờ ngủ ước tính</string>
-    <string name="hint_stress">yes/no</string>
     <string name="next_quest">Tiếp theo</string>
     <string name="quest_pam">Chọn bức ảnh gần đúng với tâm trạng của bạn nhất</string>
     <string name="instruction_after_advice">Chạm vào màn hình để tiếp tục</string>
@@ -72,6 +61,5 @@
     <string name="hint_rela">Quan hệ</string>
     <string name="hint_info">Email/Điện thoại</string>
     <string name="notify_activity_header">Danh sách người thân</string>
-    <string name="askforflash">Sử dụng đèn Flash</string>
     <string name="hint_userName">Nhập tên của bạn</string>
 </resources>
